# GeoRules

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
.claude/: settings.local.json
examples/: benchmark_alluvsim.py
examples/dataset_generation/: README.md  build_splits.py  combine_shards.py  config_demo.json  config_full.json  config_full_cb_jigsaw.json  config_full_cb_labyrinth.json  config_full_delta.json  config_full_lobes.json  config_full_meander_oxbow.json  config_full_pv_shoestring.json  config_full_sh_distal.json  config_full_sh_proximal.json  config_parallel_test.json  plot_dataset.py  plot_dataset_stats.py  replot_all_test_subsets.sh  run.sh  run_cb_jigsaw.sh  run_cb_labyrinth.sh  run_dataset.py  run_delta.sh  run_lobes.sh  run_meander_oxbow.sh  run_pv_shoestring.sh  run_sh_distal.sh  run_sh_proximal.sh
georules/: __init__.py  plotting.py
georules/dataset/: __init__.py  captions.py  cli.py  generate.py  io.py  sampling.py
georules/layers/: __init__.py  _braided.py  _fluvial.py  _genchannel.py  _make_cutoff.py  channel.py  delta.py  gaussian.py  lobe.py
legacy/: gaussian_model.py  lobe_layer.py  reservoir.py
legacy/channel_model/: fluvial_3d.py  genchannel.py  make_cutoff.py
notebooks/: interactive.ipynb  legacy_channel_comparison.ipynb
tests/: test_alluvsim_parity.py  test_channel.py  test_gaussian.py  test_layer.py  test_lobe.py  test_plotting.py  test_reservoir.py
