[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "georules"
version = "0.1.0"
description = "Rule-based 3D geological reservoir modeling"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter"]

[tool.setuptools.packages.find]
include = ["georules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
